--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
         </svg>
-        <h4 class="heading-4 heading-4--dark">Top one realtors</h4>
+        <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
         <p class="feature__text">
           Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio
           necessitatibus pariatur voluptatibus.
